# work_with_timeseries

./: README.md  pyproject.toml  requirements.txt  simple_solution.py
catboost_info/learn/: events.out.tfevents
data/processed/participants/: test_news_daily_features.csv  train_news_daily_features.csv
scripts/: baseline_solution.py  baseline_submission.csv  enhanced_solution.py
src/app/: __init__.py  cli.py  config.py  data_loader.py  paths.py
src/app/features/: __init__.py  news.py  price.py
src/app/models/: __init__.py  regressors.py
src/app/pipelines/: __init__.py  enhanced.py
src/backend/: __init__.py  app.py
test_for_ml/: quick_start.py  simple_openrouter_test.py  simple_test.py  test_enhanced_solution.py  test_meta_stock.py  test_openrouter_integration.py
